refactor: 重构基础模块